@@ -38,14 +38,14 @@ dnl Based on David Arnold's example from the comp.programming.threads
 dnl FAQ Q213.
 dnl
 
-AC_DEFUN([AC_HAVE_GETHOSTBYNAME_R],
+AC_DEFUN([AX_HAVE_GETHOSTBYNAME_R],
 [saved_CFLAGS=$CFLAGS
 CFLAGS="$CFLAGS -lnsl"
 AC_CHECK_FUNC(gethostbyname_r, [
   AC_MSG_CHECKING([for gethostbyname_r with 6 args])
-  AC_TRY_COMPILE([
+  AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
     #include <netdb.h>
-  ], [
+  ]], [[
     char *name;
     struct hostent *he, *res;
     char buffer[2048];
@@ -53,16 +53,17 @@ AC_CHECK_FUNC(gethostbyname_r, [
     int h_errnop;
 
     (void) gethostbyname_r(name, he, buffer, buflen, &res, &h_errnop);
-  ], [
+  ]])],[
     AC_DEFINE(HAVE_GETHOSTBYNAME_R,1,[Define to 1 if gethostbyname_r is available.])
     AC_DEFINE(HAVE_GETHOSTBYNAME_R_6,1,[Define to 1 if gethostbyname_r takes 6 args.])
     AC_MSG_RESULT(yes)
-  ], [
+  ],[
     AC_MSG_RESULT(no)
     AC_MSG_CHECKING([for gethostbyname_r with 5 args])
-    AC_TRY_COMPILE([
+
+    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
       #include <netdb.h>
-    ], [
+    ]], [[
       char *name;
       struct hostent *he;
       char buffer[2048];
@@ -70,26 +71,27 @@ AC_CHECK_FUNC(gethostbyname_r, [
       int h_errnop;
 
       (void) gethostbyname_r(name, he, buffer, buflen, &h_errnop);
-    ], [
+    ]])],[
       AC_DEFINE(HAVE_GETHOSTBYNAME_R,1,[Define to 1 if gethostbyname_r is available.])
       AC_DEFINE(HAVE_GETHOSTBYNAME_R_5,1,[Define to 1 if gethostbyname_r takes 5 args.])
       AC_MSG_RESULT(yes)
-    ], [
+    ],[
       AC_MSG_RESULT(no)
       AC_MSG_CHECKING([for gethostbyname_r with 3 args])
-      AC_TRY_COMPILE([
+
+      AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
         #include <netdb.h>
-      ], [
+      ]], [[
         char *name;
         struct hostent *he;
         struct hostent_data data;
 
         (void) gethostbyname_r(name, he, &data);
-      ], [
+      ]])],[
         AC_DEFINE(HAVE_GETHOSTBYNAME_R,1,[Define to 1 if gethostbyname_r is available.])
         AC_DEFINE(HAVE_GETHOSTBYNAME_R_3,1,[Define to 1 if gethostbyname_r takes 3 args.])
         AC_MSG_RESULT(yes)
-      ], [
+      ],[
         AC_MSG_RESULT(no)
       ])
     ])
@@ -99,14 +101,14 @@ CFLAGS="$saved_CFLAGS"])
 
 
 
-AC_DEFUN([AC_HAVE_GETHOSTBYADDR_R],
+AC_DEFUN([AX_HAVE_GETHOSTBYADDR_R],
 [saved_CFLAGS=$CFLAGS
 CFLAGS="$CFLAGS -lnsl"
 AC_CHECK_FUNC(gethostbyaddr_r, [
   AC_MSG_CHECKING([for gethostbyaddr_r with 7 args])
-  AC_TRY_COMPILE([
+  AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
     #include <netdb.h>
-  ], [
+  ]], [[
     char *addr;
     int length;
     int type;
@@ -116,12 +118,41 @@ AC_CHECK_FUNC(gethostbyaddr_r, [
     int h_errnop;
 
     (void) gethostbyaddr_r(addr, length, type, result, buffer, buflen, &h_errnop);
-  ], [
+  ]])],[
     AC_DEFINE(HAVE_GETHOSTBYADDR_R,1,[Define to 1 if gethostbyaddr_r is available.])
     AC_DEFINE(HAVE_GETHOSTBYADDR_R_7,1,[Define to 1 if gethostbyaddr_r takes 7 args.])
     AC_MSG_RESULT(yes)
-  ], [
+  ],[
     AC_MSG_RESULT(no)
   ])
 ])
 CFLAGS="$saved_CFLAGS"])
+
+
+
+AC_DEFUN([AX_HAVE_MTSAFE_DNS],
+[
+  AC_CHECK_LIB(socket, getaddrinfo)
+  AC_CHECK_LIB(socket, getnameinfo)
+  AC_CHECK_FUNCS(getaddrinfo getnameinfo)
+
+  if test "${ac_cv_func_getaddrinfo}" = "yes" \
+       -a "${ac_cv_func_getnameinfo}" = "yes" \
+       -a "`uname -s`" != "Darwin"; then
+    have_mtsafe_dns=yes
+  fi
+  if test "${have_mtsafe_dns}" != "yes" \
+       -a "`uname -s`" != "Darwin"; then
+    AX_HAVE_GETHOSTBYNAME_R
+    AX_HAVE_GETHOSTBYADDR_R
+    if test "${ac_cv_func_gethostbyname_r}" = "yes" \
+         -a "${ac_cv_func_gethostbyaddr_r}" = "yes" ; then
+      have_mtsafe_dns=yes
+    fi
+  fi
+  if test "${have_mtsafe_dns}" != "yes" ; then
+    AC_MSG_WARN([DNS queries use MT-unsafe calls which could result in server instability])
+  else
+    AC_DEFINE(HAVE_MTSAFE_DNS, 1, [Define to 1 if DNS calls are MT-safe])
+  fi
+])
